All changes in branch rethink... in a single commit
Remove client secret JSON file from the repository

Add client secret JSON file to .gitignore

All changes in branch rethink... in a single commit